--- a/Analyzing Wine Data.ipynb
+++ b/Analyzing Wine Data.ipynb
@@ -7,17 +7,16 @@
     "# Analyzing Wine Data\n",
     "\n",
     "### Data Set Information:\n",
+    "\n",
     "The two datasets are related to red and white variants of the Portuguese \"Vinho Verde\" wine.\n",
+    "Each wine sample comes with a quality rating of one to ten and results from several chemical tests, i.e. properties like alcohol content, acidity level, and residual sugar.\n",
     "https://archive.ics.uci.edu/ml/datasets/wine+quality\n",
     "\n",
-    "Each wine sample comes with a quality rating of one to ten, and results from several chemical tests, i.e. properties like alcohol content, acidity level and residual sugar. \n",
-    "\n",
-    "I have conducted a exploratory data analysis on the data to answer the following questions\n",
+    "I have conducted an exploratory data analysis on the wine data to answer the following questions\n",
     "1. Is a specific type of wine associated with higher quality?\n",
     "2. Do wines with higher alcohol content receive better ratings?\n",
     "3. Do sweeter wine (more residual sugar) receive better ratings?\n",
     "4. What level of acidity is associated with the highest quality?\n",
-    "\n",
     "\n"
    ]
   },
