Update Analyze Fuel Economy Data.ipynb

--- a/Analyze Fuel Economy Data.ipynb
+++ b/Analyze Fuel Economy Data.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analyzing Fuel Economy Data\n"
     "### Overview\n",
     "I am going to use pythons pandas, numpy, and matplotlib to analyze fuel economy data for different car models from 2008 and 2018.\n",
     "\n",
